--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">Meet SMS</string>
     <string name="titleText">WebSMS from NTC!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_history">HistoryActivity</string>
+    <string name="action_history">History</string>
+    <string name="title_activity_history">History</string>
 
 </resources>
